--- a/client/administration.html
+++ b/client/administration.html
@@ -224,7 +224,9 @@
 
             let payload = {
                 name: inputTitle.value,
-                cerveau: cerveau_selec.id
+                cerveau: cerveau_selec.id,
+                
+                
             };
             let myBody = JSON.stringify(payload);
             let myInit = {
@@ -255,6 +257,7 @@
                 })
 
             console.log("Requête POST envoyée avec succès");
+            console.log(boxDiscord);
         }
 
 
