--- a/client/administration.html
+++ b/client/administration.html
@@ -297,7 +297,7 @@
 </head>
 
 <body>
-    <h1> Interface d'administration des Bots</h1>
+    <h1><a class="nav-link" href="./index.html">Interface d'administration des Bots</a> </h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item"><a class="nav-link" href="./administration.html">Gestion des Bots</a></li>
