--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,8 @@
 
 <body>
   <header>
-    <h1>Bienvenue sur l'interface de gestion de ChatBots</h1>
+
+    <h1><a class="nav-link" href="./index.html">Bienvenue sur l'interface de gestion de ChatBots</a></h1>
   </header>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
