Commentaires et css legerement modifie

--- a/client/authentification.html
+++ b/client/authentification.html
@@ -1,3 +1,5 @@
+<!--Inutilisé, il s'agissait a la base d'un système d'authentification pour l'administrateur-->
+
 <!DOCTYPE html>
 <html>
   <head>
